2006-05-15  Julien Puydt  <jpuydt@free.fr>

	* src/gui/config.cpp: Fixed #341814, thanks Boying Lu.

2006-05-14  Julien Puydt  <jpuydt@free.fr>

	* src/devices/audio.cpp, src/devices/audio.h: Fixed #341309.

2006-05-13  Damien Sandras  <dsandras@gnome.org>

	* endpoints/h323.cpp endpoints/manager.cpp: 
	Ooops. Fixed previous commit.

2006-05-13  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/h323.cpp src/endpoints/manager.cpp:
	Changed default bandwidth to 4 Mbits.

2006-05-13  Julien Puydt  <jpuydt@free.fr>

	* src/gui/callbacks.cpp, src/gui/callbacks.h: Fixed #340858.

2006-05-13  Damien Sandras  <dsandras@gnome.org>
	
	* src/endpoints/sip.cpp src/endpoints/accountshandler.cpp:
	Moved subscription to MWI events in the accounts handler.

2006-05-13  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/ekiga.cpp:
	Do not take the same mutex twice. Fix provided by Michael Riepe 
	<michael mr511 de>. Thanks!

2006-05-13  Julien Puydt  <jpuydt@free.fr>

	* src/gui/callshistory.cpp, src/gui/callshistory.h: Fixed #340855.

2006-05-11  Julien Puydt  <jpuydt@free.fr>

	* src/endpoints/urlhandler.cpp, src/endpoints/urlhandler.cpp: Final
	fix for #340824.

2006-05-11  Julien Puydt  <jpuydt@free.fr>

	* src/endpoints/sip.h: Partial fix for #340824.

2006-05-11  Julien Puydt  <jpuydt@free.fr>

	* src/endpoints/pcss.cpp, src/endpoints/pcss.h: Partial fix for
	bug #340824.

2006-05-11  Julien Puydt  <jpuydt@free.fr>

	* src/endpoints/accountshandler.h, src/endpoints/ekiga.h,
	src/endpoints/h323.h: Partial fix for #340824.

2006-05-10  Julien Puydt  <jpuydt@free.fr>

	* src/devices/videooutput.cpp, src/devices/videooutput.h: Partial fix
	for #340824.

2006-05-10  Julien Puydt  <jpuydt@free.fr>

	* src/devices/videoinput.h: Partial fix for #340824.

2006-05-10  Julien Puydt  <jpuydt@free.fr>

	* src/devices/fakevideoinput.cpp, src/devices/fakevideoinput.h:
	Partial fix for #340824.

2006-05-10  Julien Puydt  <jpuydt@free.fr>
