@@ -1,5 +1,9 @@
 2006-05-15  Julien Puydt  <jpuydt@free.fr>
 
+	* src/clients/stun.cpp, src/clients/stun.h: Partial fix for #340939.
+
+2006-05-15  Julien Puydt  <jpuydt@free.fr>
+
 	* src/gui/config.cpp: Fixed #341814, thanks Boying Lu.
 
 2006-05-14  Julien Puydt  <jpuydt@free.fr>
